--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Paymes payment gateway PHP SDK",
     "type": "library",
     "license": "MIT",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Miladxandi\\Paymes\\": "src/"
